[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.43"
displaydoc = "0.2"
did-key = { git = "https://github.com/Satellite-im/did-key.rs", branch = "backport-patch-v0" }
hex = "0.4.3"
sha2 = "0.10.6"
